Small changes on the same components as before

--- a/src/templates/layout/_wrapper.pug
+++ b/src/templates/layout/_wrapper.pug
@@ -19,9 +19,45 @@ main.main-wrapper
     section(id="aboutMe" class="about-me-wrapper")
         .container
             .row
-                .col-4
-                .col-4
-                .col-4
+                header.col-12
+                    h2.secondary-heading sd
+                    .heading-separator
+                        .heading-separator__line
+                        .heading-separator__square
+                        .heading-separator__line
+                    p
+                .col-6 sd
+                .col-6 sd
     sectin(id="services" class="services-wrapper")
+        .container
+            .row
+                header.col-12
+                    h2.secondary-heading sd
+                    .heading-separator
+                        .heading-separator__line
+                        .heading-separator__square
+                        .heading-separator__line
+                .col-6 sd
+                .col-6 sd
     section(id="portfolio" class="portfolio-wrapper")
+        .container
+            .row
+                header.col-12
+                    h2.secondary-heading sd
+                    .heading-separator
+                        .heading-separator__line
+                        .heading-separator__square
+                        .heading-separator__line
+                .col-6 sd
+                .col-6 sd
     section(id="contact" class="contact-wrapper")
+        .container
+            .row
+                header.col-12
+                    h2.secondary-heading sd
+                    .heading-separator
+                        .heading-separator__line
+                        .heading-separator__square
+                        .heading-separator__line
+                .col-6 sd
+                .col-6 sd
