--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -2,7 +2,8 @@
 //~~~~~~* HOME *~~~~~~//+
 //~~~~~~~~~~~~~~~~~~~~//
 
-
+// .home-wrapper
+$home-wrapper__box-shadow: 0 1px 8px 0 rgba($color__black-1, 0.8) !default;
 // .home-wrapper::after
 // sass-lint:disable no-color-literals
 $home-wrapper__after__background-image: linear-gradient(to top, $color__black-2 0%, rgba($color__seal-brown, 0.25) 50%, rgba($color__seal-brown, 0.25) 50%, $color__black-2 100%), url(../images/noise.png) !default;
@@ -17,12 +18,14 @@ $home-wrapper__after__background-image: linear-gradient(to top, $color__black-2 
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+        box-shadow: $home-wrapper__box-shadow;
         &::after {
             content: "";
             width: 100%;
             height: 100%;
             background-image: $home-wrapper__after__background-image;
             position: absolute;
+            display: block;
             z-index: 1;
             left: 0;
             top: 0;
@@ -34,15 +37,18 @@ $home-wrapper__after__background-image: linear-gradient(to top, $color__black-2 
     }
     &-wrapper,
     &-row {
-        min-height: calc(100vh + 200px);
+        height: calc(100vh + 200px);
     }
     &-header {
         margin-bottom: 100px;
         &-buttons {
             text-align: center;
             margin-top: 38px;
-            & > * {
+            & > .btn {
                 width: 180px;
+            }
+            & > .btn:nth-child(n+2) {
+                margin-left: 25px;
             }
         }
     }
