--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -27,3 +27,4 @@ $color__seal-brown:  #131313;
 $color__nero:        #212121;
 $color__grey:        #757575;
 $color__silver:      #bdbdbd;
+$color__snow:        #fafafa;
