--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -2,4 +2,11 @@
     Main Footer
 
 footer.main-footer
-    
+    .container
+        .row
+            .col-3
+                h2 Znajdź mnie
+            .col-3
+                h2 Nawigacja
+            .col-3
+                h2 Kontakt
