--- a/src/css/main.css
+++ b/src/css/main.css
@@ -182,15 +182,27 @@
   font-size: 4.75em;
   font-weight: 900; }
 
+.secondary-heading {
+  font-size: 3em;
+  font-weight: 800; }
+  .secondary-heading:first-letter {
+    line-height: 0;
+    font-size: 3em;
+    color: #f44336; }
+
 .tertiary-heading {
   font-size: 1.55em;
   font-weight: 400;
   letter-spacing: 10px; }
 
 .primary-heading,
+.secondary-heading,
 .tertiary-heading {
-  color: #fff;
   text-align: center; }
+
+.primary-heading,
+.tertiary-heading {
+  color: #fff; }
 
 .primary-heading,
 .secondary-heading,
@@ -1581,9 +1593,10 @@ html {
             align-self: stretch !important; } }
 
 .btn {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   position: relative;
   display: inline-block;
+  overflow: hidden;
   font-size: 1em;
   font-weight: 700;
   text-align: center;
@@ -1591,7 +1604,11 @@ html {
   text-transform: uppercase;
   color: #fff;
   padding: 16.5px 20px;
-  border: 1px solid #000; }
+  border: 1px solid #fff;
+  transition: 0.15s color linear; }
+  .btn-round {
+    padding: 16.5px;
+    border-radius: 50%; }
   .btn.to-left::after {
     width: 0;
     height: 100%;
@@ -1610,21 +1627,21 @@ html {
     height: 0; }
   .btn.to-top:hover::after, .btn.to-bottom:hover::after {
     height: 100%; }
-  .btn::after, .btn.to-left::after, .btn.to-right::after, .btn.to-top::after, .btn.to-bottom::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    transition: 0.2s width ease-in-out, 0.2s height ease-in-out, 0.3s background-color ease-in-out; }
   .btn::after {
+    content: "";
     width: 0;
     height: 100%;
+    position: absolute;
+    display: block;
+    z-index: -1;
     left: 0;
-    top: 0; }
-  .btn:hover::after {
-    width: 100%;
-    background-color: #000; }
-  .btn:nth-child(n+2) {
-    margin-left: 25px; }
+    top: 0;
+    transition: 0.2s width ease-in-out, 0.2s height ease-in-out, 0.3s background-color ease-in-out; }
+  .btn:hover {
+    color: #000; }
+    .btn:hover::after {
+      width: 100%;
+      background-color: #fff; }
   .btn-primary {
     background-color: rgba(244, 67, 54, 0.1);
     border-color: #f44336; }
@@ -1645,6 +1662,36 @@ html {
     border-color: #1565c0; }
     .btn-accent:hover::after {
       background-color: #1565c0; }
+  .btn-primary:hover, .btn-primary-dark:hover, .btn-primary-light:hover, .btn-accent:hover {
+    color: #fff; }
+  .btn-arrow-down {
+    width: 48px;
+    height: 48px;
+    background-image: url(../images/icons/arrow_down_white.png);
+    background-position: -1px 1px;
+    transition: 0.15s background-image linear; }
+    .btn-arrow-down:hover {
+      background-image: url(../images/icons/arrow_down_black.png); }
+
+.icon {
+  display: inline-block;
+  width: 36px;
+  height: 36px; }
+  .icon-person {
+    background-image: url(../images/sprite.png);
+    background-position: -92px 0px; }
+  .icon-build {
+    background-image: url(../images/sprite.png);
+    background-position: -46px 0px; }
+  .icon-code {
+    background-image: url(../images/sprite.png);
+    background-position: -46px -46px; }
+  .icon-call {
+    background-image: url(../images/sprite.png);
+    background-position: 0px -46px; }
+  .icon-arrow-up {
+    background-image: url(../images/sprite.png);
+    background-position: 0px 0px; }
 
 .site-logo__img {
   max-width: 100%;
@@ -1683,6 +1730,7 @@ html {
     height: 0;
     background-color: #f44336;
     position: absolute;
+    display: block;
     left: 20%;
     bottom: 14px;
     transition: 0.2s height ease-in-out; }
@@ -1698,6 +1746,7 @@ html {
     content: "";
     width: 1px;
     height: 20px;
+    display: block;
     padding-right: 15px;
     border-left: 1px solid #1565c0;
     margin-top: 22.5px; }
@@ -1706,19 +1755,50 @@ html {
     .language-settings__link::after {
       display: none; }
 
+.section {
+  position: relative; }
+  .section:nth-child(odd) {
+    background-color: #fafafa; }
+  .section:last-child {
+    box-shadow: none; }
+  .section-decoration {
+    width: 75px;
+    height: 75px;
+    background-color: #f44336;
+    position: absolute;
+    z-index: 4;
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    border: 10px solid #fff;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    margin-top: -38px; }
+    .section-decoration-icon {
+      -webkit-transform: translate(9px, 9px) rotate(-45deg);
+          -ms-transform: translate(9px, 9px) rotate(-45deg);
+              transform: translate(9px, 9px) rotate(-45deg); }
+  .section-header {
+    padding: 165px 0 65px; }
+    .section-header-description {
+      font-size: 1.05em;
+      text-align: center;
+      margin: 0; }
+
 .home-wrapper {
   background-image: url(https://t4.ftcdn.net/jpg/01/01/49/89/240_F_101498911_eR4DpsDTpdcwuD4UNOjdr9RDiFFAwn3Q.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.8); }
   .home-wrapper::after {
     content: "";
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to top, #0a0a0a 0%, rgba(19, 19, 19, 0.25) 50%, rgba(19, 19, 19, 0.25) 50%, #0a0a0a 100%), url(../images/noise.png);
     position: absolute;
+    display: block;
     z-index: 1;
     left: 0;
     top: 0; }
@@ -1728,15 +1808,17 @@ html {
   z-index: 2; }
 
 .home-wrapper, .home-row {
-  min-height: calc(100vh + 200px); }
+  height: calc(100vh + 200px); }
 
 .home-header {
   margin-bottom: 100px; }
   .home-header-buttons {
     text-align: center;
     margin-top: 38px; }
-    .home-header-buttons > * {
+    .home-header-buttons > .btn {
       width: 180px; }
+    .home-header-buttons > .btn:nth-child(n+2) {
+      margin-left: 25px; }
 
 .heading-separator {
   display: -webkit-flex;
@@ -1750,17 +1832,31 @@ html {
           justify-content: center;
   margin: 14px 0 18px; }
   .heading-separator__line {
-    width: 240px;
+    width: 30.80872%;
     height: 1px;
-    background-color: #fff; }
+    background-color: #212121; }
+    .heading-separator__line.black {
+      background-color: #000; }
+    .heading-separator__line.white {
+      background-color: #fff; }
+    .heading-separator__line.primary {
+      background-color: #f44336; }
+    .heading-separator__line.accent {
+      background-color: #1565c0; }
   .heading-separator__square {
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
             transform: rotate(45deg);
     border: 1px solid #fff;
     margin: 0 20px; }
+    .heading-separator__square.medium {
+      width: 20px;
+      height: 20px; }
+    .heading-separator__square.primary {
+      background-color: #f44336;
+      border: 0; }
 
 *,
 *::before,
@@ -1787,6 +1883,12 @@ body {
     position: fixed;
     background-color: #212121;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8); }
+
+.main-footer {
+  background-color: #212121;
+  position: relative;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8);
+  color: #fff; }
 
 .clearfix::before, .clearfix::after {
   content: "";
