--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -4,13 +4,14 @@
 
 
 // .btn
-$btn__background-color: rgba($color__black-1, 0.1) !default;
+$btn__background-color: rgba($color__white, 0.1) !default;
 $btn__font-size: 1em !default;
 $btn__font-weight: $font-weight__bolder-7 !default;
 $btn__color: $color__white !default;
-$btn__border: 1px solid $color__black-1 !default;
+$btn__border: 1px solid $color__white !default;
 // .btn:hover::after
-$btn__hover__after__background-color: $color__black-1 !default;
+$btn__hover__after__background-color: $color__white !default;
+$btn__hover__color: $color__black-1 !default;
 
 // .btn-primary
 $btn-primary__background-color: rgba($primary-color, 0.1) !default;
@@ -36,11 +37,15 @@ $btn-accent__border-color: $accent-color !default;
 // .btn-accent:hover::after
 $btn-accent__hover__after__background-color: $accent-color !default;
 
+// .btn-primary~ & .btn-accent
+$btn-primary_btn-accent__hover__color: $color__white !default;
+
 
 .btn {
     background-color: $btn__background-color;
     position: relative;
     display: inline-block;
+    overflow: hidden;
     font-size: $btn__font-size;
     font-weight: $btn__font-weight;
     text-align: center;
@@ -49,6 +54,11 @@ $btn-accent__hover__after__background-color: $accent-color !default;
     color: $btn__color;
     padding: 16.5px 20px;
     border: $btn__border;
+    transition: 0.15s color linear;
+    &-round {
+        padding: 16.5px;
+        border-radius: 50%;
+    }
     &.to-left {
         &::after {
             width: 0;
@@ -85,34 +95,25 @@ $btn-accent__hover__after__background-color: $accent-color !default;
             }
         }
     }
-    &,
-    &.to-left,
-    &.to-right,
-    &.to-top,
-    &.to-bottom {
-        &::after {
-            content: "";
-            position: absolute;
-            z-index: -1;
-            transition: 0.2s width ease-in-out,
-                        0.2s height ease-in-out,
-                        0.3s background-color ease-in-out;
-        }
-    }
     &::after {
+        content: "";
         width: 0;
         height: 100%;
+        position: absolute;
+        display: block;
+        z-index: -1;
         left: 0;
         top: 0;
+        transition: 0.2s width ease-in-out,
+                    0.2s height ease-in-out,
+                    0.3s background-color ease-in-out;
     }
     &:hover {
+        color: $btn__hover__color;
         &::after {
             width: 100%;
             background-color: $btn__hover__after__background-color;
         }
-    }
-    &:nth-child(n+2) {
-        margin-left: 25px;
     }
     &-primary {
         background-color: $btn-primary__background-color;
@@ -148,6 +149,24 @@ $btn-accent__hover__after__background-color: $accent-color !default;
             &::after {
                 background-color: $btn-accent__hover__after__background-color;
             }
+        }
+    }
+    &-primary,
+    &-primary-dark,
+    &-primary-light,
+    &-accent {
+        &:hover {
+            color: $btn-primary_btn-accent__hover__color;
+        }
+    }
+    &-arrow-down {
+        width: 48px;
+        height: 48px;
+        background-image: url(../images/icons/arrow_down_white.png);
+        background-position: -1px 1px;
+        transition: 0.15s background-image linear;
+        &:hover {
+            background-image: url(../images/icons/arrow_down_black.png);
         }
     }
 }
