--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -5,8 +5,12 @@ footer.main-footer
     .container
         .row
             .col-3
-                h2 Znajdź mnie
+                h3 Polecane projekty
             .col-3
-                h2 Nawigacja
+                h3 Ostatnie modyfikacje
             .col-3
-                h2 Kontakt
+                h3 Przydatne linki
+            .col-12
+                p
+                    small Copyright 2015 - 2016 Mateusz Archiciński © All rights reserved
+                        
