--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -26,7 +26,7 @@ footer.main-footer
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
                     li
-                        a(href="#") 1
+                        a(href="#" class="no-link main-footer__link") 1
                     li 2
                     li 3
             .col-12
